--- a/gb/21/5/25/n12974453.md
+++ b/gb/21/5/25/n12974453.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/piedfj363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【唐浩视界】热炒甘肃夺命跑 中共泄重磅机密</h2>
-<a href="https://d5tsat6yropq6.cloudfront.net/R2pJ8H1sx"><img width="600" src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1or6b2roqil0x.cloudfront.net/Z7nJ8H1sf"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
 	<p>【大纪元2021年05月25日讯】大家好，我是唐浩，今天都好吗？</p>
-<p>今日焦点：党媒热炒甘肃夺命跑与<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>，北京掩饰重磅机密？假冒台湾媒体与政府，中共升级认知战“以疫谋统”？</p>
-<p>5月22日，中国大连发生骇人听闻的汽车撞人事件，造成5人死亡，嫌犯宣称是为报复社会；同一日，甘肃白银市举办百里越野马拉松，却意外造成21死亡，遇难率超过12%；“中国杂交水稻之父”<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>也在同一天病故。中共党媒连日对这些社会事件进行大规模报导，罕见地放宽对社会负面事件的媒体曝光与网络讨论。究竟，中共党媒如此不寻常的言论导向背后，藏着哪些猫腻？又泄露了中共哪些重磅机密？</p>
-<p>此外，台湾近日疫情持续紧张，但中共对台湾“以疫谋统”的<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E7%BB%9F%E6%88%98.md#1">统战</a>与认知战却似乎没有放松，反而变本加厉地冒充台湾媒体与政府机关，发布假消息扰乱视听。究竟，中共为什么要扩大对台湾的<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E8%AE%A4%E7%9F%A5%E4%BD%9C%E6%88%98.md#1">认知作战</a>？认知作战又是怎样运作的？本集节目，与您探讨。</p>
+<p>今日焦点：党媒热炒甘肃夺命跑与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>，北京掩饰重磅机密？假冒台湾媒体与政府，中共升级认知战“以疫谋统”？</p>
+<p>5月22日，中国大连发生骇人听闻的汽车撞人事件，造成5人死亡，嫌犯宣称是为报复社会；同一日，甘肃白银市举办百里越野马拉松，却意外造成21死亡，遇难率超过12%；“中国杂交水稻之父”<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A2%81%E9%9A%86%E5%B9%B3.md#1">袁隆平</a>也在同一天病故。中共党媒连日对这些社会事件进行大规模报导，罕见地放宽对社会负面事件的媒体曝光与网络讨论。究竟，中共党媒如此不寻常的言论导向背后，藏着哪些猫腻？又泄露了中共哪些重磅机密？</p>
+<p>此外，台湾近日疫情持续紧张，但中共对台湾“以疫谋统”的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%9F%E6%88%98.md#1">统战</a>与认知战却似乎没有放松，反而变本加厉地冒充台湾媒体与政府机关，发布假消息扰乱视听。究竟，中共为什么要扩大对台湾的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%AE%A4%E7%9F%A5%E4%BD%9C%E6%88%98.md#1">认知作战</a>？认知作战又是怎样运作的？本集节目，与您探讨。</p>
 <p>在过去这个周末，中国与台湾都发生了许多重大事件，所以今天我们要跟大家来聊两个话题：</p>
 <p>话题一：党媒热炒甘肃夺命跑与袁隆平 藏重磅猫腻？<br />
 话题二：假冒台湾媒体与政府 中共升级“以疫谋统”</p>
 <p>马上来看第一个话题。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://d5tsat6yropq6.cloudfront.net/R2pJ8H1sx"><img width="600" src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/677ac029-29a2-45dc-8576-25150ea0ae6b?r=16x9&amp;d=1062" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p style="text-align: center;"><a src=""></a><a href="https://d1or6b2roqil0x.cloudfront.net/Z7nJ8H1sf"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/677ac029-29a2-45dc-8576-25150ea0ae6b?r=16x9&amp;d=1062" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>话题一：党媒热炒甘肃夺命跑与袁隆平 藏重磅猫腻？</h2>
 <p>5月22日，是非常令人遗憾的一天。</p>
 <p>首先，是辽宁大连市发生一起骇人听闻的车祸，一名男子开着宝马轿车高速撞击路人，造成五人死亡。后来警方调查发现，肇事男子是因为投资失利，想要报复社会，因此开车高速撞人，酿下惨剧。</p>
@@ -26,8 +26,8 @@
 <p>而且，这些事件的相关视频，也在网络上广为传播与讨论，登上热搜排行，仿佛没有受到中共的太多管制，中共好像不太担心这些“不和谐”的负面新闻，可能会引发民间对中共反弹与抱怨。</p>
 <p>而且中共还安排党媒做大篇幅的报导，似乎是有意炒作、放大这些新闻事件，这一点跟过去中共谨小慎微的维稳作风，是相当有区别的。</p>
 <p>而且，也是在5月22日，“中国杂交水稻之父”袁隆平病逝，中共不但接连几天做出罕见的高规格、大篇幅系列报导，甚至还抓捕了对袁隆平发表质疑言论的7名网友。袁隆平在过去几天内，更是成为中共各媒体的热门头条。</p>
-<p>好，看到这里，您有没有发现，在过去这几天，中国媒体的版面与网络的言论空间，几乎都被袁隆平、<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E8%B6%8A%E9%87%8E%E8%B5%9B.md#1">甘肃越野赛</a>和大连撞人这三起事件填满了？是不是几乎所有中国人的视线，都被集中到这些事件上？再加上青海、云南相继传出地震，也都占据了不小的媒体版面。</p>
-<p>这种现象其实并不寻常，特别是<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E8%B6%8A%E9%87%8E%E8%B5%9B.md#1">甘肃越野赛</a>和大连撞人，是非常严重的社会事件，这类新闻对中共来说是属于“负面新闻”，报多了可能会引发民众对政府、对党的反弹，按理说中共是会“克制”这些报导的。但这次几乎没有，反而是扩大报导。</p>
+<p>好，看到这里，您有没有发现，在过去这几天，中国媒体的版面与网络的言论空间，几乎都被袁隆平、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E8%B6%8A%E9%87%8E%E8%B5%9B.md#1">甘肃越野赛</a>和大连撞人这三起事件填满了？是不是几乎所有中国人的视线，都被集中到这些事件上？再加上青海、云南相继传出地震，也都占据了不小的媒体版面。</p>
+<p>这种现象其实并不寻常，特别是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E8%B6%8A%E9%87%8E%E8%B5%9B.md#1">甘肃越野赛</a>和大连撞人，是非常严重的社会事件，这类新闻对中共来说是属于“负面新闻”，报多了可能会引发民众对政府、对党的反弹，按理说中共是会“克制”这些报导的。但这次几乎没有，反而是扩大报导。</p>
 <p>因此，中共很可能是有意放大这些事件的报导，用来当吸引眼球、转移视线的障眼法，他们不想让民众看到某些消息，中共想要遮掩某些他们觉得更敏感、更不可告人的负面消息。那么中共不希望人民看到哪些消息呢？至少有三种可能：</p>
 <h3>&lt;&lt;可能一：欧盟冻结中欧投资协定&gt;&gt;</h3>
 <p>第一，是欧盟冻结中欧投资协定的审议程序。欧洲议会在5月20日投票通过，暂停中欧投资协定的后续审批流程，除非中共解除对欧盟10名政治人物的制裁。而中共为什么要制裁这些欧洲政要？原因是他们先批评了中共对新疆人权的迫害，并且对中共施加制裁。</p>
@@ -54,7 +54,7 @@
 <p>不仅如此，台湾的《自由时报》也被冒用身份，在推特上散播假信息，宣称“2万人离奇失踪”“PM2.5爆表”，甚至还说有“未完全断气的病患被活活烧死”。</p>
 <p>其实，这些消息漏洞百出，对台湾民众来说很容易分辨真伪。毕竟台湾地狭人稠，媒体又相当发达，而且几乎人人都有手机，如果真的谁敢在河里丢弃遗体、或者在街上大量火化遗体，几乎不可能瞒得住。</p>
 <p>值得注意的是，这次还出现了“山寨版”的台湾教育部网站，上面发布假公告，宣称各级学校在家上课直到六月中，比正版教育部公告的时间还要延后。目前台湾警方认定，这些假信息、假网站都来自境外，应该是中共网军所为。</p>
-<p>其实假信息战就是一种“<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E8%AE%A4%E7%9F%A5%E4%BD%9C%E6%88%98.md#1">认知作战</a>”，通过散播大量的假信息或者半真半假的信息，来扰乱敌方的视听、引导敌方的认知，进而制造敌方的误判或者发生内部冲突与矛盾，最后达成削弱敌方战力、瓦解敌方信任的战略目标。这是一种看不见炮火硝烟、但是已经时时发生在你我生活里的全天候作战。</p>
+<p>其实假信息战就是一种“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%AE%A4%E7%9F%A5%E4%BD%9C%E6%88%98.md#1">认知作战</a>”，通过散播大量的假信息或者半真半假的信息，来扰乱敌方的视听、引导敌方的认知，进而制造敌方的误判或者发生内部冲突与矛盾，最后达成削弱敌方战力、瓦解敌方信任的战略目标。这是一种看不见炮火硝烟、但是已经时时发生在你我生活里的全天候作战。</p>
 <p>比方说，我们每天在新闻媒体上接触到的信息，在手机与网络社群看到的信息，其实都在影响着我们对周遭一切的认知与判断。换句话说，这些来自四面八方的信息，每天都用我们的大脑做为战场，在里面进行拉扯与角力，所以中共又把认知作战称做“制脑权作战”，争夺控制大脑的权力。</p>
 <p>那么认知作战是怎么运作的呢？它主要依靠两种心理学的原理，一种叫做“效度效应（validity effect）”，另一种叫做“态度三要素”。</p>
 <p>先说“效度效应”。效度效应就是把一种观点或一种信息，重复了很多次，就会让人们愿意相信它是真的。在中国古代有个非常经典的案例，就是成语“曾参杀人”。</p>
@@ -74,12 +74,12 @@
 <p>第三，分化台湾社会内部，裂解人民的互信与团结。台湾社会内部本来就存在着蓝绿对立矛盾，中共可利用认知战加强加深这些矛盾，让台湾社会的伤口越来越扩大，台湾也就越来越脆弱。</p>
 <h3>&lt;&lt;目的四：松动台湾军心与民心 削弱对抗中共的意志力量&gt;&gt;</h3>
 <p>第四，松动台湾军心与民心，削弱对抗中共的意志与力量。认知作战可以误导军民误判局面，发生内部矛盾与冲突，让台湾自我内耗。</p>
-<h3>&lt;&lt;目的五：用疫苗拉拢台湾民众 扩大<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E7%BB%9F%E6%88%98.md#1">统战</a>基础&gt;&gt;</h3>
+<h3>&lt;&lt;目的五：用疫苗拉拢台湾民众 扩大<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%9F%E6%88%98.md#1">统战</a>基础&gt;&gt;</h3>
 <p>第五，用疫苗拉拢更多台湾民众向中共倾斜，扩大统战基础，将来可以在台湾煽动更大规模的内部斗争。</p>
 <p>同时，中共如果真的提供台湾疫苗，到时候很可能会趁机削弱台湾政府主权，对国际上宣称中共有能力处理台湾疫情、这是“国内事务”，要外国不要干涉，等于是用疫苗来达成“以疫谋统”。这一点，几乎是必然发生的大概率事件。</p>
 <p>好，我们再强调一次，我们不想帮哪个政党或政府说话，我们对政治实在不感兴趣，我们只想揭露中共入侵台湾的手段与布局，同时也请大家看明白，中共并不是像他们说的“关心台湾同胞的健康”，而是把台湾当成敌人在部署一套缜密而全面的混和战术。还请台湾朋友们多加留意。</p>
 <p>好，今天先聊到这里，如果您喜欢我们的节目，请记得订阅、留言、按赞，也请您介绍给更多的朋友们知道。感谢您收看，我们下次再会。</p>
-<p>好，很抱歉，因为电视节目时间有限，今天就先聊到这里。欢迎您上网查询“唐浩”或者“<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E5%94%90%E6%B5%A9%E8%A7%86%E7%95%8C.md#1">唐浩视界</a>”，就能看到完整的节目。感谢您收看，我们下次再会。</p>
+<p>好，很抱歉，因为电视节目时间有限，今天就先聊到这里。欢迎您上网查询“唐浩”或者“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%94%90%E6%B5%A9%E8%A7%86%E7%95%8C.md#1">唐浩视界</a>”，就能看到完整的节目。感谢您收看，我们下次再会。</p>
 <p>避疫有方</p>
 <p>大疫滔滔天有眼<br />
 苍生茫茫善恶前<br />
@@ -89,48 +89,48 @@
 <p>加入会员更多互动：<ahref="https://ept.ms/3oiIUy7">https://ept.ms/3oiIUy7</a><br />
 支持唐浩：<ahref="https://donorbox.org/crossroad-tang">https://donorbox.org/crossroad-tang</a><br />
 欢迎订阅 关注YouTube：<ahref="http://bit.ly/TangHao2021">http://bit.ly/TangHao2021</a></p>
-<p>《<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E5%94%90%E6%B5%A9%E8%A7%86%E7%95%8C.md#1">唐浩视界</a>》制作组</p>
+<p>《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%94%90%E6%B5%A9%E8%A7%86%E7%95%8C.md#1">唐浩视界</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/5/11/n12939754.md#1">【唐浩视界】中共暗示新疫情？黑客攻美能源动脉</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/5/13/n12945990.md#1">【唐浩视界】学生坠楼扯出案外案 中共统台5部曲</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/5/20/n12963139.md#1">【唐浩视界】中东火箭幕后黑手 台抗疫中共搅局</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/5/22/n12967910.md#1">【唐浩视界】美中军事布战 UFO诡异介入？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/11/n12939754.md#1">【唐浩视界】中共暗示新疫情？黑客攻美能源动脉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/13/n12945990.md#1">【唐浩视界】学生坠楼扯出案外案 中共统台5部曲</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/20/n12963139.md#1">【唐浩视界】中东火箭幕后黑手 台抗疫中共搅局</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/22/n12967910.md#1">【唐浩视界】美中军事布战 UFO诡异介入？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/1/n10607931.md#1" target="_blank">林辉：中共红军“三大纪律”掩盖下的恶行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098413.md#1" target="_blank">共产暴政录：唐山大地震曾被预测出来</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/14/n13575567.md#1">【人生之钥】算命人的秘诀：告诉你算命准与不准的原因</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607236.md#1">台北内湖乐活公园樱花绽放 假日踏青赏樱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/25/n12974453.htm">【唐浩视界】热炒甘肃夺命跑 中共泄重磅机密</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/25/n12974453.htm">【唐浩视界】热炒甘肃夺命跑 中共泄重磅机密</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/piedfj363/djy/blob/master/gb/21/5/25/n12974453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/5/25/n12974453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
